# Project_Kei

./: .gitignore  CLAUDE.md  requirements.txt  start.bat  stop.bat  天童ケイ.lnk
bot/: bot.py  cli.py  config.py  napcat.py  pyproject.toml  requirements.txt  tray.py
bot/plugins/admin/: __init__.py  commands.py
bot/plugins/agent/: __init__.py  database.py  tools.py
bot/plugins/llm_chat/: __init__.py  client.py  database.py  decision.py  file_reader.py  history.py  memory.py  persona.py  remember.py  utils.py  vision.py
bot/plugins/monitor/: __init__.py  database.py  dedup.py  formatter.py  scheduler.py
bot/plugins/monitor/sources/: base.py  base_tracker.py  bilibili_dynamic.py  bilibili_live.py  douyu_live.py
bot/utils/: bilibili.py  db.py  wbi.py
data/: .startup_ok
data/chatlogs/: chatlog_1031343674_20260627_193545.txt  chatlog_1031343674_20260627_195054.txt
lagrange/: appsettings.json
scripts/: setup.ps1
tests/: conftest.py  test_bilibili_dynamic.py  test_dedup.py  test_douyu_live.py  test_formatter.py  test_wbi.py
