[project]
name = "Project_Kei"
version = "1.9.10"
description = "Project Kei - QQ Bot"
requires-python = ">=3.12"
dependencies = [
    "nonebot2[fast]>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[tool.nonebot]
plugins = ["bot.plugins.monitor", "bot.plugins.admin", "bot.plugins.llm_chat"]
